--- a/index.html
+++ b/index.html
@@ -2,18 +2,39 @@
 <html lang="az">
 <head>
     <meta charset="UTF-8">
-    <title>İrəvan Teatrı</title>
+    <title>İrəvan Dövlət Teatrı | Mətbuat Xidməti</title>
     <style>
-        body { font-family: sans-serif; background: #f0f0f0; text-align: center; padding: 50px; }
-        .card { background: white; padding: 30px; border-top: 5px solid #800000; display: inline-block; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        h1 { color: #800000; }
+        body { font-family: 'Arial', sans-serif; margin: 0; background: #fdfdfd; }
+        header { background: #800000; color: white; padding: 20px; text-align: center; border-bottom: 4px solid #b8860b; }
+        .container { max-width: 800px; margin: 20px auto; padding: 20px; }
+        .news-card { background: white; border-left: 5px solid #800000; padding: 15px; margin-bottom: 20px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+        .footer { text-align: center; padding: 20px; font-size: 14px; color: #666; }
     </style>
 </head>
 <body>
-    <div class="card">
+    <header>
         <h1>C.Cabbarlı adına İrəvan Dövlət Azərbaycan Dram Teatrı</h1>
-        <p>Rəsmi internet səhifəsi hazırlanır.</p>
-        <p><b>Mətbuat xidməti:</b> Emil Musayev</p>
+        <p>Mətbuat Xidmətinin Rəsmi Bildirişləri</p>
+    </header>
+
+    <div class="container">
+        <h2>Son Xəbərlər</h2>
+        
+        <div class="news-card">
+            <h3>Yeni mövsümə hazırlıqlar başladı</h3>
+            <p>Mətbuat xidmətinin rəhbəri Emil Musayev bildirir ki, teatrın kollektivi yeni tamaşalar üzərində intensiv işləyir...</p>
+            <small>Tarix: 13 Yanvar 2026</small>
+        </div>
+        
+        <div class="news-card">
+            <h3>Saytın sınaq versiyası işə düşdü</h3>
+            <p>Teatrın rəsmi məlumatlarının operativ çatdırılması üçün internet resursu aktivləşdirildi.</p>
+            <small>Tarix: 12 Yanvar 2026</small>
+        </div>
+    </div>
+
+    <div class="footer">
+        &copy; 2026 İrəvan Dövlət Teatrı | Emil Musayev
     </div>
 </body>
 </html>
