--- a/index.html
+++ b/index.html
@@ -5,77 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>İrəvan Dövlət Azərbaycan Dram Teatrı | Rəsmi Səhifə</title>
     <style>
-        body { font-family: 'Segoe UI', Arial, sans-serif; line-height: 1.6; margin: 0; color: #333; background-color: #f4f4f4; }
-        header { background: #800000; color: white; padding: 40px 20px; text-align: center; border-bottom: 5px solid #d4af37; }
-        .container { max-width: 1000px; margin: 20px auto; padding: 20px; background: white; box-shadow: 0 0 20px rgba(0,0,0,0.1); }
-        h1, h2, h3 { color: #800000; }
-        .news-box { background: #fff9f0; border: 2px solid #d4af37; padding: 20px; margin-bottom: 30px; border-radius: 8px; }
-        .flex-section { display: flex; flex-wrap: wrap; gap: 20px; margin-top: 20px; }
+        body { font-family: 'Times New Roman', serif; line-height: 1.6; margin: 0; color: #2c3e50; background-color: #fdfaf6; }
+        header { background: linear-gradient(rgba(128, 0, 0, 0.85), rgba(128, 0, 0, 0.85)), url('https://upload.wikimedia.org/wikipedia/commons/e/e6/Irevan_Azerbaijani_Theatre.jpg'); background-size: cover; color: #fff; padding: 50px 20px; text-align: center; border-bottom: 5px solid #d4af37; }
+        .container { max-width: 1000px; margin: 30px auto; padding: 40px; background: #fff; box-shadow: 0 10px 30px rgba(0,0,0,0.1); border-radius: 4px; }
+        h1, h2 { color: #800000; text-transform: uppercase; }
+        .news-box { background: #fdf2f2; border-left: 6px solid #800000; padding: 25px; margin-bottom: 30px; }
+        .flex-section { display: flex; flex-wrap: wrap; gap: 30px; margin-top: 30px; }
         .flex-item { flex: 1; min-width: 300px; }
-        .gallery { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; margin: 20px 0; }
-        .gallery img { width: 100%; height: 150px; object-fit: cover; border-radius: 5px; cursor: pointer; transition: 0.3s; }
-        .gallery img:hover { transform: scale(1.05); }
-        .leadership-card { background: #f9f9f9; padding: 15px; border-left: 5px solid #800000; margin-bottom: 10px; }
-        .social-links { text-align: center; padding: 20px; background: #800000; color: white; }
-        .social-links a { color: #d4af37; text-decoration: none; margin: 0 15px; font-weight: bold; font-size: 18px; }
-        .social-links a:hover { color: white; }
-        .badge { background: #800000; color: white; padding: 5px 10px; border-radius: 4px; font-size: 12px; }
+        .gallery { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin: 25px 0; }
+        .gallery img { width: 100%; height: 220px; object-fit: cover; border-radius: 5px; border: 3px solid #eee; }
+        .info-card { background: #f9f9f9; padding: 20px; border-radius: 5px; border: 1px solid #ddd; margin-bottom: 15px; }
+        .social-bar { background: #800000; color: white; text-align: center; padding: 25px; margin-top: 50px; }
+        .social-bar a { color: #d4af37; text-decoration: none; margin: 0 15px; font-weight: bold; font-size: 18px; border: 1px solid #d4af37; padding: 8px 15px; border-radius: 4px; transition: 0.3s; }
+        .social-bar a:hover { background: #d4af37; color: #800000; }
+        .badge { background: #d4af37; color: #800000; padding: 3px 10px; font-weight: bold; border-radius: 3px; font-size: 14px; }
     </style>
 </head>
 <body>
 
 <header>
     <h1>C.Cabbarlı adına İrəvan Dövlət Azərbaycan Dram Teatrı</h1>
-    <p>Mərhəmət və Sənətin 144 İllik Salnaməsi</p>
+    <p>Qədim İrəvanın sənət yadigarı — 144 illik tarix</p>
 </header>
 
 <div class="container">
     
     <div class="news-box">
-        <span class="badge">YENİ</span>
-        <h2>Tarixi Hadisə: Teatrın Yenidən Qurulmuş Binası İstifadəyə Verildi!</h2>
-        <p><strong>24 dekabr 2025-ci il</strong> tarixində Azərbaycan Respublikasının Prezidenti cənab İlham Əliyevin müvafiq Sərəncamı ilə əsaslı təmir olunmuş İrəvan Dövlət Azərbaycan Dram Teatrının binasının təntənəli açılış mərasimi keçirilmişdir.</p>
-        <p>Müasir işıq və səs sistemləri, 300 nəfərlik möhtəşəm tamaşa zalı və yeni yaradıcılıq emalatxanaları ilə təchiz olunmuş bina teatrın yeni inkişaf mərhələsinin təməlidir.</p>
+        <span class="badge">ƏN SON XƏBƏR</span>
+        <h2>Teatrın Yenidən Qurulmuş Binasının Təntənəli Açılışı</h2>
+        <p><strong>24 dekabr 2025-ci il</strong> tarixində C.Cabbarlı adına İrəvan Dövlət Azərbaycan Dram Teatrının əsaslı təmir və bərpadan sonra yeni binasının açılış mərasimi keçirilmişdir. Bu hadisə teatrın 144 illik tarixində yeni inkişaf mərhələsinin başlanğıcı hesab olunur.</p>
+        <p>Müasir texniki avadanlıqlarla təchiz olunmuş yeni bina, teatr kollektivinin yaradıcılıq potensialını daha yüksək səviyyədə təqdim etməyə imkan verir.</p>
         <div class="gallery">
-            <img src="https://teatro.az/uploads/posts/2025/12/irevan-teatri-acilis.jpg" alt="Bina Açılışı">
-            <img src="https://report.az/storage/news/2025/12/24/irevan-teatri-bina.jpg" alt="Teatrın Yeni Görünüşü">
-            <img src="https://azertag.az/files/2025/12/24/irevan-dadt.jpg" alt="Açılış Mərasimi">
+            <img src="https://aztc.gov.az/images/news/2021/irevan-teatri.jpg" alt="Yeni Bina Görünüşü">
+            <img src="https://medeniye.az/storage/2020/09/25/5f6de6b6770a3.jpg" alt="Açılış Mərasimindən">
         </div>
     </div>
 
     <div class="flex-section">
         <div class="flex-item">
-            <h2>Rəhbərlik</h2>
-            <div class="leadership-card">
-                <p><strong>Teatrın Rəhbəri:</strong> İftixar Piriyev</p>
-                <small>Əməkdar mədəniyyət işçisi, sənətşünaslıq üzrə fəlsəfə doktoru</small>
-            </div>
-            <div class="leadership-card">
-                <p><strong>Mətbuat Xidmətinin Rəhbəri:</strong> Emil Musayev</p>
+            <h2>Mətbuat Xidməti</h2>
+            <div class="info-card">
+                <p><strong>Mətbuat Katibi:</strong> Emil Musayev</p>
+                <p>Teatrın fəaliyyəti, yeni tamaşalar və rəsmi xəbərlərlə bağlı operativ məlumatların yayılması mətbuat xidməti tərəfindən həyata keçirilir.</p>
             </div>
             
-            <h2>Köhnə Kadrlardan Arxiv</h2>
-            <p>Teatrın tarixində Yunis Nuri, Vidadi Əliyev kimi ustad sənətkarların böyük əməyi olmuşdur.</p>
+            <h2>Tarixi Arxiv</h2>
+            <p>1882-ci ildə Firidun bəy Köçərli tərəfindən təməli qoyulan teatrımız, Yunis Nuri, Əli Şahsabahlı kimi ustadların izini daşıyır.</p>
             <div class="gallery">
-                <img src="https://westaz.org/uploads/documents/irevan-teatr-arxiv1.jpg" alt="Köhnə İrəvan Teatrı">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/e/e6/Irevan_Azerbaijani_Theatre.jpg" alt="Tarixi Bina">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/e/e6/Irevan_Azerbaijani_Theatre.jpg" alt="Qədim İrəvan Teatrı">
             </div>
         </div>
 
         <div class="flex-item">
-            <h2>Qısa Tarixçə</h2>
-            <p>1882-ci ildə İrəvanda təməli qoyulan teatr, 1928-ci ildə Dövlət statusu almışdır. 1949-cu və 1988-ci illərdə deportasiya acılarını yaşamasına baxmayaraq, öz milli kimliyini və sənət eşqini qoruyub saxlamışdır.</p>
-            <p>Bu gün teatr Bakıda öz doğma binasında müasir tamaşaları ilə tamaşaçılarını salamlayır.</p>
+            <h2>Haqqımızda</h2>
+            <p>İrəvan teatrı Azərbaycan mədəniyyətinin ən qədim ocaqlarından biridir. 1928-ci ildə Dövlət statusu almış teatr, illər boyu sürgün və çətinliklər görsə də, öz sənət ideallarından dönməmişdir.</p>
+            <p>Bu gün teatrımız özünün ən müasir dövrünü yaşayır və klassik əsərlərlə yanaşı müasir dramaturqların pyeslərinə də geniş yer ayırır.</p>
         </div>
     </div>
 
 </div>
 
-<div class="social-links">
-    <h3>Bizi İzləyin</h3>
-    <a href="https://www.facebook.com/irevandovlettheatre" target="_blank">FACEBOOK</a> | 
-    <a href="https://www.instagram.com/irevan_dovlet_teatri" target="_blank">INSTAGRAM</a>
-    <p style="margin-top: 20px; font-size: 12px; opacity: 0.8;">&copy; 2026 İrəvan Dövlət Azərbaycan Dram Teatrı</p>
+<div class="social-bar">
+    <h3>Rəsmi Sosial Media Hesablarımız</h3>
+    <div style="margin: 20px 0;">
+        <a href="https://www.facebook.com/irevandovlettheatre" target="_blank">FACEBOOK</a>
+        <a href="https://www.instagram.com/irevan_dovlet_teatri" target="_blank">INSTAGRAM</a>
+    </div>
+    <p style="font-size: 14px; opacity: 0.7;">&copy; 2026 İrəvan Dövlət Azərbaycan Dram Teatrı</p>
 </div>
 
 </body>
